fix: adjust check mark alignment

--- a/src/components/select-field/SelectField.scss
+++ b/src/components/select-field/SelectField.scss
@@ -18,7 +18,9 @@
 }
 
 .select-option-check-icon {
+    position: relative;
+    left: -5px;
     flex: none;
-    width: 20px;
+    width: 16px;
     height: 16px;
 }
